--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>AmgTwitter</title>
+        <link rel="icon" type="image/png" href="./img/favicon.png" />
         <link rel="stylesheet" type="text/css" href="./css/login.css">
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700' rel='stylesheet' type='text/css'>
     </head>
@@ -13,7 +14,7 @@
                 Con fines educativos los cuales constan sobre el uso 
                 de API rest de grandes compañias como twitter, asi como el desarrollo
                 de una aplicacion del lado del cliente Single Page Aplication (SPA) con AngularJS.<br/>
-                Sustituye localhost por 127.0.0.1.
+                <a href="http://127.0.0.1:39963/AmgTwitter/">127.0.0.1</a>
             </p>
             <div id="accion"></div>
         </div>
