--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -8,17 +8,16 @@
         <link rel="stylesheet" type="text/css" href="../css/home.css">     
     </head>
     <body>
-        <div class="info-user"></div>
+        <div class="col1"></div>
         <div class="timeline">
             <ol class='stream-items'> </ol>
-
         </div>
     </body>
 
     <script src="../js/vendor/jquery-2.2.0.min.js"></script>
     <script src="../js/util/Cookies.js"></script>
     <script src="../js/util/ajax.js"></script>
-    
+
     <script src="../js/app/view.js"></script>
     <script src="../js/app/model.js"></script>
     <script src="../js/app/controller.js"></script>
