--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,12 +8,11 @@
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700' rel='stylesheet' type='text/css'>
     </head>
     <body>
+        <div class="background-image"></div>
         <div class="marco">
             <h1><span>AMG</span> Twitter</h1>
-            <p>Una aplicacion echa de un estudiante para estudiantes.
-                Con fines educativos los cuales constan sobre el uso 
-                de API rest de grandes compañias como twitter, asi como el desarrollo
-                de una aplicacion del lado del cliente Single Page Aplication (SPA) con AngularJS.<br/>
+            <p>Inicia en un click con tu cuenta de twitter y seras redirigido al momento.
+                Towl es una aplicacion de terceros que replica la experiencia de twitter en tu navegador<br/>
                 <a href="http://127.0.0.1:39963/AmgTwitter/">127.0.0.1</a>
             </p>
             <div id="accion"></div>
