--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -5,12 +5,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">     
         <link rel="icon" type="image/png" href="../img/favicon.png" />
+        <link rel="stylesheet" type="text/css" href="../css/normalize.css"> 
         <link rel="stylesheet" type="text/css" href="../css/home.css">     
     </head>
     <body>
+        <div class='nav'></div>
+        <div class="align">
         <div class="col1"></div>
         <div class="timeline">
             <ol class='stream-items'> </ol>
+        </div>
         </div>
     </body>
 
