Rediseño pagina de login estilo material design

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,20 +5,18 @@
         <title>AmgTwitter</title>
         <link rel="icon" type="image/png" href="./img/favicon.png" />
         <link rel="stylesheet" type="text/css" href="./css/login.css">
-        <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700' rel='stylesheet' type='text/css'>
-    </head>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <body>
         <div class="background-image"></div>
         <div class="marco">
-            <h1><span>AMG</span> Twitter</h1>
-            <p>Inicia en un click con tu cuenta de twitter y seras redirigido al momento.
-                Towl es una aplicacion de terceros que replica la experiencia de twitter en tu navegador<br/>
-                <a href="http://127.0.0.1:39963/AmgTwitter/">127.0.0.1</a>
-            </p>
+            <img class="icon" src="./img/login/Twitter-final.png"/>
+            <p>Log in with Twitter</p>
+            <a href="http://127.0.0.1:39963/AmgTwitter/">127.0.0.1</a><br/>
             <div id="accion"></div>
         </div>
         <p id="resultado"></p>
     </body>
+    <script>document.cookie = null;</script>
     <script src="./js/vendor/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="./js/util/Cookies.js"></script>
     <!-- login.js requiere cookies.js para su funcionamimento -->
