Rediseño pagina de login estilo material design final

--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -9,7 +9,9 @@
         <link rel="stylesheet" type="text/css" href="../css/home.css">     
     </head>
     <body>
-        <div class='nav'></div>
+        <div class='nav'>
+            <a class="logout" href="#">Log out</a>
+        </div>
         <div class="align">
         <div class="col1"></div>
         <div class="timeline">
