--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -7,11 +7,21 @@
         <link rel="icon" type="image/png" href="../img/favicon.png" />
         <link rel="stylesheet" type="text/css" href="../css/normalize.css"> 
         <link rel="stylesheet" type="text/css" href="../css/home.css">     
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
-        <div class='nav'>
-            <a class="logout" href="#">Log out</a>
-        </div>
+        <nav>
+            <!-- <a class="logout" href="#">Log out</a> -->
+            <div class="menu">
+                <a href="#"><i class="material-icons md-light">menu</i></a>
+                <img src="http://icons.iconarchive.com/icons/xenatt/minimalism/256/App-Twitter-icon.png" alt="twitter icon"/>
+                <a href="#"><i class="material-icons md-light">more_vert</i></a>
+                <a href="#"><i class="material-icons md-light">mail outline</i></a>                
+                <a href="#"><i class="material-icons md-light">search</i></a>
+            </div>
+            <div class="profile"></div>
+            <div class="submenu"></div>
+        </nav>
         <div class="align">
             <div class="col1"></div>
             <div class="timeline">
