Cambiadas las peticiones en cliente a asincronas Añadida medicion del tiempo de ejecucion Optimizacion de instrucciones en el init Añadido submenu en el header con estilos

--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -20,7 +20,13 @@
                 <a href="#"><i class="material-icons md-light">search</i></a>
             </div>
             <div class="profile"></div>
-            <div class="submenu"></div>
+            <div class="submenu">
+                <div class="sm1">
+                    <a class="selected" href="#"><i class="material-icons md-light">home</i> <span>Home</span></a>
+                    <a href="#"><i class="material-icons md-light">notifications</i> <span>Notifications</span></a>
+                    <a href="#"><i class="material-icons md-light">#</i><span>Discover</span></a>
+                </div>
+            </div>
         </nav>
         <div class="align">
             <div class="col1"></div>
