Añadido generador de plantillas moustache. Añadida pagina ocultadora de url mediante iframe.
Cambiado el codifo del timeline para que use plantillas moustache.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,9 +20,7 @@
             </div>
         </div>
         <p id="resultado">
-            <a href="http://127.0.0.1:39963/AmgTwitter/">Go Timeline
-                <!-- <img class="spinner" src="./img/login/spin-final.gif"/> -->
-            </a>
+            <a href="http://127.0.0.1:39963/AmgTwitter/index.html">Go Timeline</a>
         </p>
     </body>    
     <script src="./js/vendor/jquery-2.2.0.min.js"></script>
