--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -22,33 +22,34 @@
             <div class="profile"></div>
             <div class="submenu">
                 <div class="sm1">
-                    <a class="selected" href="#"><i class="material-icons md-light">home</i> <span>Home</span></a>
-                    <a href="#"><i class="material-icons md-light">notifications</i> <span>Notifications</span></a>
+                    <a class="selected" href="#home"><i class="material-icons md-light">home</i> <span>Home</span></a>
+                    <a href="#notifications"><i class="material-icons md-light">notifications</i> <span>Notifications</span></a>
                     <a href="#hastag"><i class="material-icons md-light">#</i><span>Discover</span></a>
                 </div>
             </div>
         </nav>
-        <div class="align">
-            <div class="col1"></div>
-            <div class="timeline">
-                <ol class='stream-items'> </ol>
-            </div>
-        </div>
+    <main id="container">
+    </main>
     </body>
+    <!-- Dependencies -->
+    <script src="../js/vendor/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="../js/vendor/path.min.js" type="text/javascript"></script>
+    <script src="../js/vendor/handlebars-v4.0.5.js" type="text/javascript"></script>
+     
+    <script src="../js/util/Cookies.js" type="text/javascript"></script>
+    <script src="../js/util/ajax.js" type="text/javascript"></script>
 
-    <script src="../js/vendor/jquery-2.2.0.min.js"></script>
-    <script src="../js/vendor/path.min.js"></script>
-    <script src="../js/util/Cookies.js"></script>
-    <script src="../js/util/ajax.js"></script>
+    <!-- App -->
+    <script src="../js/app/view.js" type="text/javascript"></script>
+    <script src="../js/app/model.js" type="text/javascript"></script>
+    <script src="../js/app/controller.js" type="text/javascript"></script>
+    <script src="../js/app/routes.js" type="text/javascript"></script>
 
-    <script src="../js/app/view.js"></script>
-    <script src="../js/app/model.js"></script>
-    <script src="../js/app/controller.js"></script>
-    <script src="../js/app/routes.js"></script>
     <script>
         //var path = window.location.host+window.location.pathname; 
-        Path.listen();
         oController.init();
-        
+        // Activamos el enrutado
+        Path.listen();
+        fTwitterRoutes();
     </script>   
 </html>
